✨ Add new storage server "argon" and update related configurations
- Add "argon" to inventory under new "storages" group
- Update DNS zone file to include "argon" with IP 10.0.0.103
- Add link to NAS (argon) in the web index page
- Update site.yaml to apply roles only to "servers" group

--- a/inventory.yaml
+++ b/inventory.yaml
@@ -1,5 +1,5 @@
 ---
-home:
+servers:
   hosts:
     helium:
       apt_repo_arch: amd64
@@ -20,3 +20,7 @@ home:
           addresses:
             - 10.0.0.102
           dev: wlan0
+
+storages:
+  hosts:
+    argon:
