🔧 Update reproxy configuration and role assignment
- Modify reproxy HEADER to allow all origins (CORS)
- Move reproxy role from helium-specific to all servers

--- a/roles/reproxy/tasks/main.yaml
+++ b/roles/reproxy/tasks/main.yaml
@@ -35,5 +35,5 @@
       DEBUG: "true"
       KEEP_HOST: "true"
       HEADER:
-        X-Frame-Options:SAMEORIGIN,
+        Access-Control-Allow-Origin:*
   notify: Restart reproxy
