✨ Enhance web interface and improve error handling
- Add custom 404 error page
- Update styles for error message display
- Reduce server status update interval to 5 seconds
- Configure reproxy to use custom 404 page

--- a/roles/reproxy/tasks/main.yaml
+++ b/roles/reproxy/tasks/main.yaml
@@ -32,6 +32,7 @@
       DOCKER_ENABLED: "true"
       DOCKER_AUTO: "true"
       ASSETS_LOCATION: /web
+      ASSETS_NOT_FOUND: 404.html
       DEBUG: "true"
       KEEP_HOST: "true"
       HEADER:
