🌐 Implement DuckDNS dynamic DNS updates
- Add DuckDNS domain and token to group variables (encrypted)
- Create DuckDNS update script template
- Schedule hourly DuckDNS updates via cron

--- a/roles/cronn/tasks/main.yaml
+++ b/roles/cronn/tasks/main.yaml
@@ -34,6 +34,13 @@
     group: "{{ autouser.name }}"
     mode: '0774'
 
+- name: Copy duck dns script
+  template:
+    src: duck.sh.j2
+    dest: "{{ dir_data_app }}/scripts/duck.sh"
+    group: "{{ autouser.name }}"
+    mode: '0774'
+
 - name: Copy crontab file
   copy:
     src: .
