--- a/roles/sys-agent/tasks/main.yaml
+++ b/roles/sys-agent/tasks/main.yaml
@@ -12,5 +12,4 @@
       reproxy.dest: /status
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    env:
-      LISTEN: 0.0.0.0:8080
+  notify: Restart reproxy
