🔧 Update Zabbix and DNS configurations
• 🏷️ Add zabbix CNAME to PowerDNS zone file
• 🖥️ Update ZBX_SERVER_HOST in zabbix-agent
• 🌐 Add DNS settings to zabbix-server container

--- a/roles/zabbix-agent/tasks/main.yaml
+++ b/roles/zabbix-agent/tasks/main.yaml
@@ -18,5 +18,5 @@
     labels:
       reproxy.enabled: "false"
     env:
-      ZBX_SERVER_HOST: "helium"
+      ZBX_SERVER_HOST: "zabbix,127.0.0.1"
       ZBX_HOSTNAME: "{{ ansible_hostname }}"
