--- a/roles/zabbix-server/tasks/main.yaml
+++ b/roles/zabbix-server/tasks/main.yaml
@@ -16,6 +16,10 @@
     network_mode: host
     ports:
       - 10051:10051
+    dns_servers:
+      - "{{ dns }}"
+    dns_search_domains:
+      - home
     env:
       DB_SERVER_HOST: "helium"
       POSTGRES_USER: "{{ postgresql.user }}"
