🔧 Update user and package management, tweak networking
- 👥 Add sudo permission for users
- 📦 Introduce useless_packages list
- 🗑️ Remove iperf3 package
- 🔒 Mask systemd-resolved service
- 🛠️ Minor syntax improvements

--- a/roles/common/tasks/network.yaml
+++ b/roles/common/tasks/network.yaml
@@ -17,7 +17,7 @@
   systemd_service:
     name: "{{ item }}"
     state: stopped
-    masked: yes  # Provides the strongest protection against a service being started inadvertently.
+    masked: true  # Provides the strongest protection against a service being started inadvertently.
     enabled: false
   loop:
     - dhcpcd
