--- a/roles/powerdns/tasks/disable_systemd-resolved.yaml
+++ b/roles/powerdns/tasks/disable_systemd-resolved.yaml
@@ -4,3 +4,4 @@
     name: systemd-resolved
     state: stopped
     enabled: false
+    masked: true  # Provides the strongest protection against a service being started inadvertently.
