--- a/roles/common/tasks/common.yaml
+++ b/roles/common/tasks/common.yaml
@@ -7,3 +7,8 @@
   package:
     name: "{{ common_packages }}"
     state: present
+
+- name: Uninstall useless packages
+  package:
+    name: "{{ useless_packages }}"
+    state: absent
