🌐 Add AdGuard Home

--- a/roles/powerdns/files/dnsdist.conf
+++ b/roles/powerdns/files/dnsdist.conf
@@ -6,7 +6,7 @@ setVerbose(true)
 -- newServer({address="10.0.0.101:5300", name="pdns-auth", qps=0})
 -- newServer({address="8.8.8.8", name="google-dns", qps=0})
 newServer({address="10.0.0.101:5300", pool="pdns-auth", qps=0})
-newServer({address="8.8.8.8", pool="google-dns", qps=0})
+newServer({address="10.0.0.101:5301", pool="adguard-dns", qps=0})
 
 setLocal('0.0.0.0')
 
@@ -15,7 +15,7 @@ addACL("0.0.0.0/0")
 
 -- Conditional forwarding based on domain
 addAction("home.", PoolAction("pdns-auth"))
-addAction(".", PoolAction("google-dns"))
+addAction(".", PoolAction("adguard-dns"))
 
 -- Define a web interface for monitoring (use a strong password)
 setKey("mysecretpassword")
