--- a/roles/ollama/tasks/main.yaml
+++ b/roles/ollama/tasks/main.yaml
@@ -21,6 +21,8 @@
       - /data/ollama/data:/root/.ollama
     ports:
       - 11434:11434
+    env:
+      OLLAMA_KEEP_ALIVE: "-1"
     labels:
       reproxy.enabled: "false"
 
