🦙 Update Docker image to latest and remove memory limit

--- a/roles/ollama/tasks/main.yaml
+++ b/roles/ollama/tasks/main.yaml
@@ -13,10 +13,9 @@
 - name: Start ollama container
   docker_container:
     name: ollama
-    image: ollama/ollama
+    image: ollama/ollama:latest
     state: started
     restart_policy: unless-stopped
-    memory: 8G
     volumes:
       - /data/ollama/data:/root/.ollama
     ports:
