🌐 Add conditional forwarding and DNS-SD PTR records

--- a/roles/powerdns/files/dnsdist.conf
+++ b/roles/powerdns/files/dnsdist.conf
@@ -14,7 +14,17 @@ setLocal('0.0.0.0')
 addACL("0.0.0.0/0")
 
 -- Conditional forwarding based on domain
+-- 1. Handle reverse DNS for local addresses
+addAction(
+    AndRule({
+        QTypeRule(DNSQType.PTR),
+        SuffixMatchNodeRule({"in-addr.arpa", "ip6.arpa"})
+    }),
+    PoolAction("pdns-auth")
+)
+-- 2. Handle .home domains
 addAction("home.", PoolAction("pdns-auth"))
+-- 3. Everything else goes to AdGuardHome
 addAction(".", PoolAction("adguard-dns"))
 
 -- Define a web interface for monitoring (use a strong password)
