✨ Add xenon cloud server to infrastructure
- 🌐 Configure cloud network with VPN access
- 🖥️ Add server monitoring to dashboard
- 📝 Update network topology documentation
- 🔧 Configure netplan for cloud interface

--- a/site.yaml
+++ b/site.yaml
@@ -44,3 +44,8 @@
   roles:
     - role: watchdog
       tags: watchdog
+- name: Deploy xenon-specific components
+  hosts: xenon
+  roles:
+    - role: wireguard-client
+      tags: wireguard-client
